--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,12 @@
 site_name: Pycharm Guide
 site_url: https://PycharmGuide.com/
+site_description: Pycharm Guide
+site_author: Pycharm Guide
+repo_url: https://github.com/WilsonSue/CommUserGuide.git
+repo_name: Pycharm Guide
+docs_dir: docs
+site_dir: site
+edit_uri: edit/master/docs/
 nav:
   - Home: index.md
   - Adding External Library: ExternalLibrary.md
@@ -7,5 +14,13 @@ nav:
   - How to Use Debugger: Debugger.md
   - Troubleshooting: Troubleshooting.md
   - Glossary: Glossary.md
+extra_css: [extra.css]
 theme:
   name: material
+  logo: /PyCharm_Icon.svg.png
+  favicon: /PyCharm_Icon.svg.png
+  font:
+    text: Roboto
+    code: Roboto Mono
+extra:
+  homepage: https://PycharmGuide.com/
