Add glossary and change ExistingProjects

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,3 +28,8 @@ theme:
     primary: green
 extra:
   homepage: https://PycharmGuide.com/
+markdown_extensions:
+  - attr_list
+  - pymdownx.emoji:
+      emoji_index: !!python/name:materialx.emoji.twemoji
+      emoji_generator: !!python/name:materialx.emoji.to_svg
